[package]
name = "app-switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
serde_json = {version ="1.0", features = ["preserve_order"]}
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
indexmap = {version = "1.9.2", features = ["serde"]}
